# persephone

./: .clang-format  .clang-tidy  .clangd  .deepsource.toml  .gitignore  .lcovrc  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  config.example.yaml  flake.nix  gcovr.cfg  meson.build  meson.options  persephone.kdev4  persephone.spec
.github/: complement_package.gotpl  llvm.sh
.github/actions/setup-build-env/: action.yml
.github/workflows/: ci.yml  codeql.yml  docker-cross.yml  docker.yml  tests.yml
.kdev4/: persephone.kdev4
.reuse/: dep5
cmake/: FindSodium.cmake  code-coverage.cmake
complement/: Dockerfile  config.yaml  hs_persephone.go
fuzz_targets/: json_sign.cpp
scripts/: build_docker.sh
src/: json.hpp  main.cpp
src/database/: database.cpp  database.hpp  state_ordering.cpp  state_ordering.hpp
src/database/migrations/: migrator.cpp  migrator.hpp  v1.sql  v10.sql  v11.sql  v12.sql  v13.sql  v14.sql  v2.sql  v3.sql  v4.sql  v5.sql  v6.sql  v7.sql  v8.sql  v9.sql
src/federation/: federation_sender.cpp  federation_sender.hpp
src/utils/: config.cpp  config.hpp  errors.hpp  json_utils.cpp  json_utils.hpp  room_utils.cpp  room_utils.hpp  room_version.hpp  state_res.cpp  state_res.hpp  utils.cpp  utils.hpp
src/webserver/: json.cpp  json.hpp  sync_utils.hpp  webserver.cpp  webserver.hpp
src/webserver/client_server_api/: ClientServerCtrl.cpp  ClientServerCtrl.hpp  auth.cpp  auth.hpp  c_s_api.hpp
src/webserver/server_server_api/: ServerServerCtrl.cpp  ServerServerCtrl.hpp
src/worker_queue/: ReconnectingLibEventHandler.cpp  ReconnectingLibEventHandler.hpp  producer.cpp  producer.hpp  worker.cpp  worker.hpp
subprojects/: SOCI.wrap  c-ares.wrap  cpp-httplib.wrap  snitch.wrap  yaml-cpp.wrap  yaml_cpp.wrap
sytest/: blacklist.txt  cpanfile  install-deps.pl  whitelist.txt
sytest/docker/: Dockerfile  entrypoint.sh
sytest/lib/SyTest/Homeserver/: Persephone.pm
sytest/lib/SyTest/HomeserverFactory/: Persephone.pm
sytest/scripts/: persephone_sytest.sh
tests/: client_server_test.cpp  config_test.cpp  database_test.cpp  drogon_tests.cpp  json_serialization_test.cpp  room_utils_test.cpp  send_join_test.cpp  state_ordering_test.cpp  state_res_test.cpp  sync_test.cpp  test_helpers.hpp  utils_test.cpp
